# OpenGL_Cpp

./: CMakeLists.txt  README.md
include/glad/: glad.h
resources/c++/: window.cpp
src/: glad.c
